test/compile_errors/err_atomic_non_integer_string.w
//! expect-error: Atomic[T] requires integer or pointer T

use std.sync

var bad: Atomic[str]

fn main:
    ()
